# ftl_lightspeed

./: .gitignore  README.md  ftl.py  ftl_producer.py  ftl_test.py  generate.py  pyproject.toml  test_table.sql
examples/: first_names.csv  ftl_copy_out.py  ftl_csv_out.py  generate.py  last_names.csv  test_table.sql
ftl_lightspeed/: __init__.py  ftl.py  ftl_consumer.py  ftl_producer.py  version.py
ftl_lightspeed/db/: utils.py
