[project]
name = "ftl_lightspeed"
version = "0.1.0"
description = "Fast ETL for CSV and PostgreSQL"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Justin Pfeifer", email="justin@example.com" }
]
dependencies = [
  "psycopg[binary]>=3.1.0",
  "numpy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/justin-pfeifer/ftl_lightspeed"
Repository = "https://github.com/justin-pfeifer/ftl_lightspeed"
